# cxx-modules

./: CMakeLists.txt  main.cpp
cmake/: Modules.cmake
src/: math.cppm  stuff.hpp
src/utils/: module2.cppm
